Fix overflow text ellipsis

--- a/src/ui/Input/index.scss
+++ b/src/ui/Input/index.scss
@@ -124,8 +124,12 @@
     width: calc(100% - 26px); // (12px side padding + 1px border) * 2 = 26px
     height: calc(100% - 16px); // (7px padding + 1px border) * 2 = 16px
     overflow: hidden;
-    text-overflow: ellipsis;
-    word-break: break-word;
+    display: -webkit-box;
+    -webkit-line-clamp: 1;
+    &.textarea {
+      -webkit-line-clamp: 4;
+    }
+    -webkit-box-orient: vertical;
     position: absolute;
     pointer-events: none;
     top: 8px;
